@@ -1,6 +1,8 @@
 NEXT (2.6)
 -----------------------------------
 
+- fix issue514: teach assertion reinterpretation about private class attributes
+
 - change -v output to include full node IDs of tests.  Users can copy
   a node ID from a test run, including line number, and use it as a
   positional argument in order to run only a single test.
